functions/backend/testing/test-penalty-optimization-results.txt
file:///Users/michael/Library/CloudStorage/GoogleDrive-michael@landesman.com/My%20Drive/Sandyland/SAMS/backend/testing/testPenaltyOptimization.js:16
import { TestHarness } from './testHarness.js';
         ^^^^^^^^^^^
SyntaxError: The requested module './testHarness.js' does not provide an export named 'TestHarness'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:182:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:266:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.15.0
